Main structure division html/css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,42 @@
 </head>
 
 <body>
+    <!-- CONTENITORE 100VH -->
+
+    <div class="wrapper">
+
+        <!-- LEFT SIDE -->
+
+        <div id="left-side">
+            <header>
+                testa left side
+            </header>
+
+            <main>
+                corpo left side
+            </main>
+        </div>
+
+        <!-- RIGHT SIDE -->
+
+        <div id="right-side">
+            <header>
+                testa right side
+            </header>
+
+            <main>
+                corpo right side
+            </main>
+        </div>
+
+        <!-- FOOTER PLAYBAR -->
+
+        <footer id="playbar">
+            piedi
+        </footer>
+
+    </div>
+
 
 </body>
 
