Main structure added flex and dimension

--- a/index.html
+++ b/index.html
@@ -21,33 +21,41 @@
 
     <div class="wrapper">
 
-        <!-- LEFT SIDE -->
+        <div id="main-section">
 
-        <div id="left-side">
-            <header>
-                testa left side
-            </header>
+            <!-- LEFT SIDE -->
 
-            <main>
-                corpo left side
-            </main>
-        </div>
+            <div id="left-side" class="debug">
+                <header class="debug">
+                    testa left side
+                </header>
 
-        <!-- RIGHT SIDE -->
+                <main class="debug">
+                    corpo left side
+                </main>
+            </div>
 
-        <div id="right-side">
-            <header>
-                testa right side
-            </header>
+            <!-- RIGHT SIDE -->
 
-            <main>
-                corpo right side
-            </main>
+            <div id="right-side" class="debug">
+                <header class="debug">
+                    testa right side
+                </header>
+
+                <nav class="debug">
+                    navbar
+                </nav>
+
+                <main class="debug">
+                    corpo right side
+                </main>
+            </div>
+
         </div>
 
         <!-- FOOTER PLAYBAR -->
 
-        <footer id="playbar">
+        <footer id="playbar" class="debug">
             piedi
         </footer>
 
