--- a/index.html
+++ b/index.html
@@ -26,29 +26,109 @@
             <!-- LEFT SIDE -->
 
             <div id="left-side" class="debug">
-                <header class="debug">
-                    testa left side
+
+                <!-- LOGO -->
+                <header>
+                    <div class="logo">
+                        <img src="img/logo.svg" alt="Logo">
+                    </div>
                 </header>
 
-                <main class="debug">
-                    corpo left side
+                <main>
+                    <!-- LEFT NAVBAR -->
+                    <ul class="navbar-left">
+                        <li><a href="#" class="d-flex vertical-align gap10">
+                                <div class="icons">
+                                    <img src="img/home.svg" alt="Home">
+                                </div>
+                                <div>
+                                    Home
+                                </div>
+                            </a></li>
+                        <li><a href="#" class="d-flex vertical-align gap10">
+                                <div class="icons">
+                                    <img src="img/search.svg" alt="Home">
+                                </div>
+                                <div>
+                                    Cerca
+                                </div>
+                            </a></li>
+                        <li><a href="#" class="d-flex vertical-align gap10">
+                                <div class="icons">
+                                    <img src="img/libreria.svg" alt="Home">
+                                </div>
+                                <div>
+                                    Home
+                                </div>
+                            </a></li>
+                    </ul>
+
+                    <!-- PLAYLIST SECTION -->
+                    <h2>
+                        PLAYLIST
+                    </h2>
+                    <ul class="playlist">
+                        <li>
+                            <a href="#" class="d-flex vertical-align gap10">
+                                <div>
+                                    <i id="add-playlist" class="fa-sharp fa-solid fa-square-plus"></i>
+                                </div>
+                                <div style="font-size: 1.2em;">
+                                    Crea Playlist
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nome Playlist
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nome Playlist
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nome Playlist
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nome Playlist
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nome Playlist
+                            </a>
+                        </li>
+                    </ul>
+
                 </main>
+
+                <footer>
+
+                </footer>
             </div>
 
             <!-- RIGHT SIDE -->
 
             <div id="right-side" class="debug">
+
                 <header class="debug">
                     testa right side
                 </header>
 
-                <nav class="debug">
-                    navbar
-                </nav>
+                <section>
+                    <nav class="debug">
+                        navbar
+                    </nav>
+                    <main class="debug">
+                        lorem3000
+                    </main>
+                </section>
 
-                <main class="debug">
-                    corpo right side
-                </main>
             </div>
 
         </div>
