Side bar first complete setup

--- a/index.html
+++ b/index.html
@@ -41,70 +41,93 @@
                                 <div class="icons">
                                     <img src="img/home.svg" alt="Home">
                                 </div>
-                                <div>
+                                <span>
                                     Home
-                                </div>
+                                </span>
                             </a></li>
                         <li><a href="#" class="d-flex vertical-align gap10">
                                 <div class="icons">
                                     <img src="img/search.svg" alt="Home">
                                 </div>
-                                <div>
+                                <span>
                                     Cerca
-                                </div>
+                                </span>
                             </a></li>
                         <li><a href="#" class="d-flex vertical-align gap10">
                                 <div class="icons">
                                     <img src="img/libreria.svg" alt="Home">
                                 </div>
-                                <div>
+                                <span>
                                     Home
-                                </div>
+                                </span>
                             </a></li>
                     </ul>
 
                     <!-- PLAYLIST SECTION -->
-                    <h2>
-                        PLAYLIST
-                    </h2>
-                    <ul class="playlist">
-                        <li>
-                            <a href="#" class="d-flex vertical-align gap10">
-                                <div>
-                                    <i id="add-playlist" class="fa-sharp fa-solid fa-square-plus"></i>
-                                </div>
-                                <div style="font-size: 1.2em;">
-                                    Crea Playlist
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Nome Playlist
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Nome Playlist
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Nome Playlist
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Nome Playlist
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Nome Playlist
-                            </a>
-                        </li>
-                    </ul>
+                    <div>
+                        <h2>
+                            PLAYLIST
+                        </h2>
+                        <ul class="playlist">
+                            <li>
+                                <a href="#" class="d-flex vertical-align gap10">
+                                    <div>
+                                        <i id="add-playlist" class="fa-sharp fa-solid fa-square-plus"></i>
+                                    </div>
+                                    <div style="font-size: 1.2em;">
+                                        Crea Playlist
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Nome Playlist
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Nome Playlist
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Nome Playlist
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Nome Playlist
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Nome Playlist
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
 
+                    <!-- FOOTER LEFT SIDE -->
+                    <div class="footer-leftside">
+                        <div class="topfoot">
+                            <a class="install d-flex vertical-align gap10" href="">
+                                <div class="download">
+                                    <img src="img/download.svg" alt="Download">
+                                </div>
+                                <span>
+                                    Installa app
+                                </span>
+                            </a>
+                        </div>
+                        <div class="botfoot">
+                            <a class="d-flex vertical-align gap10" href="">
+                                <img class="profile" src="img/profile.svg" alt="Profile">
+                                <span>
+                                    Iacopo De Palatis
+                                </span>
+                            </a>
+                        </div>
+                    </div>
                 </main>
 
                 <footer>
