Added main section: header and navbar

--- a/index.html
+++ b/index.html
@@ -106,32 +106,28 @@
                             </li>
                         </ul>
                     </div>
-
-                    <!-- FOOTER LEFT SIDE -->
-                    <div class="footer-leftside">
-                        <div class="topfoot">
-                            <a class="install d-flex vertical-align gap10" href="">
-                                <div class="download">
-                                    <img src="img/download.svg" alt="Download">
-                                </div>
-                                <span>
-                                    Installa app
-                                </span>
-                            </a>
-                        </div>
-                        <div class="botfoot">
-                            <a class="d-flex vertical-align gap10" href="">
-                                <img class="profile" src="img/profile.svg" alt="Profile">
-                                <span>
-                                    Iacopo De Palatis
-                                </span>
-                            </a>
-                        </div>
-                    </div>
                 </main>
 
-                <footer>
-
+                <!-- FOOTER LEFT SIDE -->
+                <footer class="footer-leftside">
+                    <div class="topfoot">
+                        <a class="install d-flex vertical-align gap10" href="">
+                            <div class="download">
+                                <img src="img/download.svg" alt="Download">
+                            </div>
+                            <span>
+                                Installa app
+                            </span>
+                        </a>
+                    </div>
+                    <div class="botfoot">
+                        <a class="d-flex vertical-align gap10" href="">
+                            <img class="profile" src="img/profile.svg" alt="Profile">
+                            <span>
+                                Iacopo De Palatis
+                            </span>
+                        </a>
+                    </div>
                 </footer>
             </div>
 
@@ -139,16 +135,59 @@
 
             <div id="right-side" class="debug">
 
-                <header class="debug">
-                    testa right side
+                <header class="d-flex vertical-align f-end debug">
+                    <div class="btn mrg-rgt25 txt-color-wt">
+                        EFFETTUA L'UPGRADE
+                    </div>
                 </header>
 
-                <section>
-                    <nav class="debug">
-                        navbar
+                <section id="main-body" class="txt-color-wt">
+                    <nav class="navbar-right debug">
+                        <ul class="d-flex f-center gap25">
+                            <li>
+                                IN EVIDENZA
+                            </li>
+                            <li>
+                                PODCAST
+                            </li>
+                            <li>
+                                CLASSIFICHE
+                            </li>
+                            <li>
+                                GENERI E MOOD
+                            </li>
+                            <li>
+                                NUOVE USCITE
+                            </li>
+                            <li>
+                                SCOPRI
+                            </li>
+                        </ul>
                     </nav>
-                    <main class="debug">
-                        lorem3000
+
+                    <main class="">
+                        <section id="recently-played">
+                            <h2>
+                                Recently played
+                            </h2>
+                            <div class="d-flex">
+                                <div class="col">
+                                    <div class="card">
+                                        <div class="song-img">
+                                            <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                                        </div>
+                                        <div>
+                                            <h3>
+                                                Heavy Metal
+                                            </h3>
+                                            <p>
+                                                Subtitle
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </main>
                 </section>
 
@@ -158,7 +197,7 @@
 
         <!-- FOOTER PLAYBAR -->
 
-        <footer id="playbar" class="debug">
+        <footer id="playbar" class="">
             piedi
         </footer>
 
