Added recently played section

--- a/index.html
+++ b/index.html
@@ -131,10 +131,13 @@
                 </footer>
             </div>
 
+
+
             <!-- RIGHT SIDE -->
 
             <div id="right-side" class="debug">
 
+                <!-- RIGHT HEADER -->
                 <header class="d-flex vertical-align f-end debug">
                     <div class="btn mrg-rgt25 txt-color-wt">
                         EFFETTUA L'UPGRADE
@@ -142,6 +145,8 @@
                 </header>
 
                 <section id="main-body" class="txt-color-wt">
+
+                    <!-- RIGHT NAVBAR -->
                     <nav class="navbar-right debug">
                         <ul class="d-flex f-center gap25">
                             <li>
@@ -166,28 +171,95 @@
                     </nav>
 
                     <main class="">
+
+                        <!-- RECENTLY PLAYED -->
                         <section id="recently-played">
                             <h2>
                                 Recently played
                             </h2>
-                            <div class="d-flex">
-                                <div class="col">
-                                    <div class="card">
-                                        <div class="song-img">
-                                            <img src="img/metal_lifting.jpg" alt="Heavy Metal">
-                                        </div>
-                                        <div>
-                                            <h3>
-                                                Heavy Metal
-                                            </h3>
-                                            <p>
-                                                Subtitle
-                                            </p>
-                                        </div>
+                            <div class="d-flex gap25">
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            Heavy Metal
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/stranger.jpeg" alt="Stranger things">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            Stranger Things, Vol. 1 (a Netflix OriginaSeries Soundtrack)
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            A quiet place
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/split.jpeg" alt="Split">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            Split
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/cure.jpeg" alt="A cure for wellness">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            A cure for wellness
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="song-img">
+                                        <img src="img/sinister.jpeg" alt="Sinister">
+                                    </div>
+                                    <div class="txt-center">
+                                        <h3 style="padding-top: 10px;">
+                                            Sinister
+                                        </h3>
+                                        <p class="subtitle">
+                                            Subtitle
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                         </section>
+
+
                     </main>
                 </section>
 
