Added for you section

--- a/index.html
+++ b/index.html
@@ -170,97 +170,130 @@
                         </ul>
                     </nav>
 
-                    <main class="">
 
-                        <!-- RECENTLY PLAYED -->
-                        <section id="recently-played">
-                            <h2>
-                                Recently played
-                            </h2>
-                            <div class="d-flex gap25">
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/metal_lifting.jpg" alt="Heavy Metal">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            Heavy Metal
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
+
+                    <!-- RECENTLY PLAYED -->
+                    <section id="recently-played" class="padding-x">
+                        <h2>
+                            Recently played
+                        </h2>
+                        <div class="d-flex gap25">
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                                 </div>
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/stranger.jpeg" alt="Stranger things">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            Stranger Things, Vol. 1 (a Netflix OriginaSeries Soundtrack)
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/aquietplace.jpeg" alt="A quiet place">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            A quiet place
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/split.jpeg" alt="Split">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            Split
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/cure.jpeg" alt="A cure for wellness">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            A cure for wellness
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="song-img">
-                                        <img src="img/sinister.jpeg" alt="Sinister">
-                                    </div>
-                                    <div class="txt-center">
-                                        <h3 style="padding-top: 10px;">
-                                            Sinister
-                                        </h3>
-                                        <p class="subtitle">
-                                            Subtitle
-                                        </p>
-                                    </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Heavy Metal
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
                                 </div>
                             </div>
-                        </section>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/stranger.jpeg" alt="Stranger things">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Stranger Things, Vol. 1 (a Netflix OriginaSeries Soundtrack)
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/aquietplace.jpeg" alt="A quiet place">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        A quiet place
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/split.jpeg" alt="Split">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Split
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/cure.jpeg" alt="A cure for wellness">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        A cure for wellness
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/sinister.jpeg" alt="Sinister">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Sinister
+                                    </h3>
+                                    <p class="subtitle">
+                                        Subtitle
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
+                    <!-- CREATO PER TE -->
+                    <section id="creato-per-te" class="padding-x">
+                        <h2>
+                            Recently played
+                        </h2>
+                        <p class="subtitle padding-top">
+                            Piu' ascolti, piu' accurati saranno i tuoi suggerimenti
+                        </p>
+                        <div class="d-flex gap25">
 
-                    </main>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/radar.jpeg" alt="Release radar">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Release radar
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="song-img">
+                                    <img src="img/mixdaily.jpeg" alt="Daily Mix">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Daily Mix
+                                    </h3>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </section>
+
                 </section>
 
             </div>
