Added more listened section

--- a/index.html
+++ b/index.html
@@ -294,6 +294,47 @@
 
                     </section>
 
+                    <!-- ARTISTI PIU' ASCOLTATI -->
+                    <section id="creato-per-te" class="padding-x">
+                        <h2>
+                            Artisti piu' popolari
+                        </h2>
+                        <p class="subtitle padding-top">
+                            Piu' ascolti, piu' accurati saranno i tuoi suggerimenti
+                        </p>
+                        <div class="d-flex gap25">
+
+                            <div class="card">
+                                <div>
+                                    <img class="song-img-circle" src="img/youg.jpeg" alt="Release radar">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Lana Del Rey
+                                    </h3>
+                                    <p class="subtitle">
+                                        Artista
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div>
+                                    <img class="song-img-circle" src="img/einaudi.jpeg" alt="Release radar">
+                                </div>
+                                <div class="txt-center">
+                                    <h3 style="padding-top: 10px;">
+                                        Ludovico Einaudi
+                                    </h3>
+                                    <p class="subtitle">
+                                        Artista
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </section>
+
                 </section>
 
             </div>
