Added playbar footer

--- a/index.html
+++ b/index.html
@@ -291,11 +291,10 @@
                             </div>
 
                         </div>
-
                     </section>
 
                     <!-- ARTISTI PIU' ASCOLTATI -->
-                    <section id="creato-per-te" class="padding-x">
+                    <section id="most-listened" class="padding-x">
                         <h2>
                             Artisti piu' popolari
                         </h2>
@@ -332,7 +331,6 @@
                             </div>
 
                         </div>
-
                     </section>
                 </section>
             </div>
@@ -341,8 +339,66 @@
 
         <!-- FOOTER PLAYBAR -->
 
-        <footer id="playbar" class="">
-            piedi
+        <footer id="playbar" class="d-flex sp-between vertical-align padding-x">
+            <div class="playbar-left d-flex sp-between">
+
+                <ul>
+                    <li>
+                        <a href="#" class="d-flex vertical-align gap10">
+                            <div class="listening">
+                                <img src="img/sinister.jpeg" alt="Sinister">
+                            </div>
+                            <div class="listening-txt">
+                                <h3 style="padding-top: 10px;">
+                                    Sinister
+                                </h3>
+                                <p class="subtitle">
+                                    Brano nome
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="d-flex vertical-align gap10">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+
+            <div class="playbar-center d-flex column f-center">
+                <div class=>
+                    <ul class="d-flex vertical-align f-center gap25">
+                        <li><i class="fa-solid fa-shuffle"></i></li>
+                        <li><i class="fa-solid fa-backward-step"></i></li>
+                        <li><i class="fa-regular fa-circle-play"></i></li>
+                        <li><i class="fa-solid fa-forward-step"></i></li>
+                        <li><i class="fa-solid fa-rotate-right"></i></li>
+                    </ul>
+                </div>
+                <div class="padding-top d-flex sp-between">
+                    <p class="padding-x">00:25</p>
+                    <input type="range">
+                    <p class="padding-x">04:10</p>
+                </div>
+            </div>
+
+            <div class="playbar-right">
+                <ul class="d-flex sp-evenly">
+                    <li>
+                        <i class="fa-solid fa-bars"></i>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-desktop"></i>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-volume-high"></i>
+                    </li>
+                    <li>
+                        <input type="range">
+                    </li>
+                </ul>
+            </div>
         </footer>
 
     </div>
