Added style to input range

--- a/index.html
+++ b/index.html
@@ -341,7 +341,6 @@
 
         <footer id="playbar" class="d-flex sp-between vertical-align padding-x">
             <div class="playbar-left d-flex sp-between">
-
                 <ul>
                     <li>
                         <a href="#" class="d-flex vertical-align gap10">
@@ -359,7 +358,6 @@
                         </a>
                     </li>
                 </ul>
-
                 <div class="d-flex vertical-align gap10">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-regular fa-folder"></i>
@@ -367,7 +365,7 @@
             </div>
 
             <div class="playbar-center d-flex column f-center">
-                <div class=>
+                <div class="">
                     <ul class="d-flex vertical-align f-center gap25">
                         <li><i class="fa-solid fa-shuffle"></i></li>
                         <li><i class="fa-solid fa-backward-step"></i></li>
@@ -376,10 +374,10 @@
                         <li><i class="fa-solid fa-rotate-right"></i></li>
                     </ul>
                 </div>
-                <div class="padding-top d-flex sp-between">
-                    <p class="padding-x">00:25</p>
+                <div class="d-flex sp-between vertical-align">
+                    <p style="padding: 0 10px 0 50px;">00:25</p>
                     <input type="range">
-                    <p class="padding-x">04:10</p>
+                    <p style="padding: 0 50px 0 10px;">04:10</p>
                 </div>
             </div>
 
